--- a/Algorithm/Algorithm.vcxproj
+++ b/Algorithm/Algorithm.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="algo.h" />
     <ClInclude Include="bst.h" />
     <ClInclude Include="graph.h" />
+    <ClInclude Include="misc.h" />
     <ClInclude Include="number.h" />
     <ClInclude Include="sorting.h" />
     <ClInclude Include="stdafx.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="algo.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="graph.cpp" />
+    <ClCompile Include="misc.cpp" />
     <ClCompile Include="number.cpp" />
     <ClCompile Include="sorting.cpp" />
     <ClCompile Include="stdafx.cpp" />
